@@ -1,4 +1,3 @@
 .deps
-db_test
 Makefile
 Makefile.in
